Text alignment changes to the 'no more issues' note.

--- a/src/stylesheets/partials/timelines.less
+++ b/src/stylesheets/partials/timelines.less
@@ -8,6 +8,7 @@
 
 	dt.end {
 		margin-bottom: 0;
+		text-align: center;
 
 		& + dd {
 			margin-bottom: 0;
@@ -127,6 +128,10 @@
 				}
 			}
 
+	    }
+
+	    dt.end { 
+	    	text-align: left;
 	    }
 	}
 
